:bug: Hide overflow elements in body

--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@ body {
   background-color: #330f1f;
   font-family: 'Arial Black', serif;
   user-select: none;
+  overflow: hidden;
 }
 
 main {
